navbar is added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         .items:hover {
             background-color: rgb(245, 237, 252);
             color: rgb(131, 16, 238);
+            cursor: pointer;
         }
     </style>
 </head>
@@ -52,7 +53,7 @@
 
                 </div>
             </div>
-
+            <hr>
     </header>
     <hr>
 
@@ -68,8 +69,8 @@
 
         <!-- News Sections  -->
         <section>
-            <div >
-
+            <div id="news-blog-container">
+                
             </div>
         </section>
     </main>
