footer section is added

--- a/index.html
+++ b/index.html
@@ -68,12 +68,18 @@
         </section>
 
         <!-- News Sections  -->
-        <section>
+        <section class="container mt-5  ">
             <div id="news-blog-container">
-                
+
             </div>
         </section>
     </main>
+
+
+
+    <footer class="bg-white text-center py-4">
+        <p class="m-0 fw-semibold text-secondary">Copyright-2022 TOP NEWS 24/7</p>
+    </footer>
 
 
 
@@ -85,6 +91,7 @@
         crossorigin="anonymous"></script>
 
     <script src="js/newsContainer.js"></script>
+    <script src="https://kit.fontawesome.com/20acbfdcb2.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
