--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
                 </div>
             </div>
             <hr>
+
     </header>
     <hr>
 
 
     <main>
+
         <!-- News Category container -->
         <section class="container">
             <div id="news-category-container"
@@ -67,6 +69,14 @@
             </div>
         </section>
 
+        <!-- loader section -->
+        <section>
+            <div id="loader" class="d-flex justify-content-center d-none">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
         <!-- News Sections  -->
         <section class="container mt-5  ">
             <div id="news-blog-container">
@@ -77,7 +87,7 @@
 
 
 
-    <footer class="bg-white text-center py-4">
+    <footer class="bg-white text-center py-4 mt-5">
         <p class="m-0 fw-semibold text-secondary">Copyright-2022 TOP NEWS 24/7</p>
     </footer>
 
