total modal part is completed

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                         <h5 class="modal-title" id="exampleModalLabel"></h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body">
+                    <div id="modal-body" class="modal-body">
 
                     </div>
-                    <div id="modal-body" class="modal-footer">
+                    <div class="modal-footer">
 
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     </div>
