spinner problem is resolved

--- a/index.html
+++ b/index.html
@@ -62,9 +62,16 @@
     <main>
 
         <!-- News Category container -->
-        <section class="container">
+        <section class="container mb-5">
             <div id="news-category-container"
                 class="d-flex justify-content-between flex-column text-center flex-sm-column flex-md-row">
+
+            </div>
+        </section>
+
+        <!-- items found section  -->
+        <section class="container py-3  bg-white mt-5">
+            <div id="items-number-container">
 
             </div>
         </section>
@@ -85,7 +92,7 @@
         </section>
 
         <!-- modal section  -->
-        <!-- Modal -->
+        
 
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
