--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <a class="nav-link active  " aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item  pe-3">
-                            <a class="nav-link active" href="#">Blog</a>
+                            <a class="nav-link active" href="blog.html" target="_blank">Blog</a>
                         </li>
                         <li class="nav-item">
                             <img src="images/person 2.png" class="w-50" alt="">
@@ -70,7 +70,7 @@
         </section>
 
         <!-- items found section  -->
-        <section class="container py-4 bg-white mt-5">
+        <section class="container py-4 bg-white mt-5 shadow-sm">
             <div id="items-number-container">
 
             </div>
@@ -78,14 +78,14 @@
 
         <!-- loader section -->
         <section>
-            <div id="loader" class="d-flex justify-content-center d-none">
+            <div style="height:600px" id="loader" class="d-flex justify-content-center align-items-center d-none ">
                 <div class="spinner-border" role="status">
                     <span class="visually-hidden">Loading...</span>
                 </div>
             </div>
         </section>
         <!-- News Sections  -->
-        <section class="container mt-5  ">
+        <section class="container mt-5  p-0">
             <div id="news-blog-container">
 
             </div>
