sorted the categoriesDetails array in descending order

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- navigation bar section -->
     <header>
         <nav class="container navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
+            <div class="container-fluid p-0">
                 <a class="navbar-brand fw-semibold" href="#"><span class="bg-primary text-white p-2"> TOP NEWS
                         24/7</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -56,13 +56,13 @@
             <hr>
 
     </header>
-    <hr>
+    <hr class="container">
 
 
     <main>
 
         <!-- News Category container -->
-        <section class="container mb-5">
+        <section class="container mb-5 p-0">
             <div id="news-category-container"
                 class="d-flex justify-content-between flex-column text-center flex-sm-column flex-md-row">
 
